tests/errors/sem_call20.java
public class sem_call20 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(i , i , s);
}
}